--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint": "^7.32.0",
     "vite": "^2.4.4"
   }
 }
