--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.32.0",
+    "jest": "^27.0.6",
     "vite": "^2.4.4"
   }
 }
