--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "vite": "^2.4.4"
+  },
+  "husky":{
+    "hooks":{
+      "pre-commit": "npm run lint && npm run format"
+    }
   }
 }
