added new config details to eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb"
-    ],
+    "extends": ["plugin:prettier/recommended", "plugin:react/recommended", "airbnb"],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -14,13 +11,13 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
+    "plugins": ["react"],
     "rules": {
-        "indent": [
-            "error", 
-            4
-        ]
+        "prettier/prettier": "error",
+        "react/prop-types": 0,
+        "linebreak-style": ["error", "unix"],
+        "arrow-body-style": "off",
+        "prefer-arrow-callback": "off",
+        "indent": ["error", 4]
     }
 }
