--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "lint-staged": "^11.1.2",
     "vite": "^2.4.4"
   },
-  "husky":{
-    "hooks":{
+  "husky": {
+    "hooks": {
       "pre-commit": "npm run lint && npm run format"
     }
   }
