--- a/package.json
+++ b/package.json
@@ -4,17 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.+(js|jsx)": [
-      "eslint --fix",
-      "prettier --write --ignore-unknown"
-    ],
-    "*.+(json|css|md)": [
-      "prettier --write"
-    ]
+    "serve": "vite preview"
   },
   "dependencies": {
     "react": "^17.0.0",
@@ -27,12 +17,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
-    "lint-staged": "^11.1.2",
     "vite": "^2.4.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm run format"
-    }
   }
 }
