--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "shopping-list",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^7.0.1",
-    "jest": "^27.0.6",
-    "vite": "^2.4.4"
-  }
+    "name": "shopping-list",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "prettier": "^2.3.2",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react-refresh": "^1.3.1",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "husky": "^7.0.1",
+        "jest": "^27.0.6",
+        "lint-staged": "^11.1.2",
+        "vite": "^2.4.4"
+    },
+    "lint-staged": {
+        "*.+(js|jsx)": [
+            "eslint --fix",
+            "prettier --write --ignore-unknown"
+        ],
+        "*.+(json|css|md)": [
+            "prettier --write"
+        ]
+    }
 }
