--- a/package.json
+++ b/package.json
@@ -13,12 +13,28 @@
         "react-dom": "^17.0.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.15.0",
+        "@testing-library/dom": "^8.1.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/user-event": "^13.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.1",
-        "eslint": "^7.32.0",
+        "babel-eslint": "^10.1.0",
+        "babel-jest": "^27.0.6",
+        "babel-preset-react-app": "^10.0.0",
+        "eslint": "^7.8.0",
+        "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^1.7.0",
         "husky": "^7.0.1",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^27.0.6",
+        "jest-circus": "^27.0.6",
+        "jest-scss-transform": "^1.0.1",
+        "jest-watch-typeahead": "^0.6.4",
         "lint-staged": "^11.1.2",
         "vite": "^2.4.4"
     },
@@ -30,5 +46,41 @@
         "*.+(json|css|md)": [
             "prettier --write"
         ]
+    },
+    "jest": {
+        "roots": [
+            "<rootDir>"
+        ],
+        "testMatch": [
+            "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+            "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+        ],
+        "testEnvironment": "jsdom",
+        "transform": {
+            "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+            "^.+\\.scss$": "jest-scss-transform",
+            "^.+\\.css$": "<rootDir>/jest/mocks/cssMock.js"
+        },
+        "transformIgnorePatterns": [
+            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
+            "^.+\\.module\\.(css|sass|scss)$"
+        ],
+        "moduleNameMapper": {
+            "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+        },
+        "watchPlugins": [
+            "jest-watch-typeahead/filename",
+            "jest-watch-typeahead/testname"
+        ],
+        "resetMocks": true
+    },
+    "babel": {
+        "env": {
+            "test": {
+                "presets": [
+                    "react-app"
+                ]
+            }
+        }
     }
 }
