--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,9 @@
 {
     "printWidth": 85,
     "arrowParens": "always",
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "endOfLine": "lf",
     "semi": false,
     "tabWidth": 4
 }
