resolve main.jsx linter and prettier issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "plugin:prettier/recommended",
-        "plugin:react/recommended",
-        "airbnb",
-        "airbnb/hooks"
-    ],
+    "extends": ["plugin:react/recommended", "airbnb", "airbnb/hooks"],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -16,15 +11,13 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": ["react"],
     "rules": {
-        "prettier/prettier": "error",
         "react/prop-types": 0,
         "linebreak-style": ["error", "unix"],
         "arrow-body-style": "off",
         "prefer-arrow-callback": "off",
-        "indent": ["error", 4],
         "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
         "semi": ["error", "never"]
-    }
+    },
+    "plugins": ["react"]
 }
