--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     },
     "rules": {
         "react/prop-types": 0,
-        "linebreak-style": ["error", "unix"],
+        "linebreak-style": ["error", "windows"],
         "arrow-body-style": "off",
         "prefer-arrow-callback": "off",
         "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
