--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "dev": "vite",
         "build": "vite build",
         "serve": "vite preview",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "test": "jest -env=jsdom"
     },
     "dependencies": {
         "prettier": "^2.3.2",
@@ -16,6 +17,7 @@
         "@babel/core": "^7.15.0",
         "@testing-library/dom": "^8.1.0",
         "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.1",
         "babel-eslint": "^10.1.0",
@@ -52,7 +54,7 @@
             "<rootDir>"
         ],
         "testMatch": [
-            "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+            "<rootDir>/src/**/tests/**/*.{js,jsx,ts,tsx}",
             "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
         ],
         "testEnvironment": "jsdom",
