change linter configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "plugins": ["react"],
     "overrides": [
         {
-            "files": ["*/spec.ts"]
+            "excludedFiles": "*.test.js"
         }
     ]
 }
