change linter configuration again

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "plugins": ["react"],
     "overrides": [
         {
-            "excludedFiles": "*.test.js"
+            "files": ["tests/*.test.js"]
         }
     ]
 }
